--- a/youtube-clone-front_end/src/components/header.module.css
+++ b/youtube-clone-front_end/src/components/header.module.css
@@ -6,6 +6,7 @@
 	/* border: 1px solid red; */
 	/* border-bottom: 1px solid black; */
 	box-shadow: 1px 2px 3px black;
+	z-index: 2;
 }
 .mainNav {
 	display: flex;
